# vrf-flip

./: .env.sample  .gitignore  Anchor.toml  CNAME  Cargo.toml  Makefile  README.md  asset-manifest.json  cli.ts  gh-action-devnet.json  index.html  package.json  request.ts  tsconfig.json
.github/actions/setup-workspace/: action.yaml
.github/workflows/: anchor-test.yml  devnet-tests.yml  localnet-tests.yml
.switchboard/networks/: default.config.json
app/: README.md  craco.config.cjs  index.html  package.json  tsconfig.json  vite.config.ts
app/public/: index.html  manifest.json
app/src/: App.tsx  Router.tsx  index.tsx
app/src/components/: NavigationBar.tsx
app/src/data/: index.tsx
app/src/types/: index.ts
app/src/util/: const.ts  css.ts  index.ts
assets/: index-09718868.js  index-0eba075c.js  index-10a78eac.js  index-1240f543.js  index-27749ef3.js  index-2796b178.js  index-296b23a1.js  index-2f9df3b5.js  index-339c12ef.js  index-3edd318e.js  index-3ee2821d.js  index-55371235.js  index-5fa7fb94.js  index-6bb0ae09.js  index-734613ae.js  index-877cf3c9.js  index-8ae6ec91.js  index-92b19661.js  index-95a458ed.js  index-a0f4ef00.js  index-a3086d01.js  index-a8674248.js  index-b785eb2e.js  index-c059ebd8.js  index-c12f9ab9.js  index-cb1d63ea.js  index-ce3b4df5.js  index-cf8cc798.js  index-d2c9bd74.js  index-d5313086.js  index-df531afc.js  index-e09de613.css  index-e22c478b.js  index-ee00c3b8.js  index-fc963347.js  index-fd60b9ed.js  index-ff312936.js
client/: house.ts  index.ts  program.ts  switchboard.ts  types.ts  user.ts  utils.ts
programs/vrf-flip/: Cargo.toml
programs/vrf-flip/src/: lib.rs  utils.rs
programs/vrf-flip/src/actions/: house_init.rs  user_airdrop.rs  user_bet.rs  user_init.rs  user_settle.rs
programs/vrf-flip/src/impls/: game_impls.rs  round_impls.rs  user_impls.rs
scripts/: request.ts  setup-program.js  update-measurement.ts
src/: lib.rs
src/actions/: house_init.rs  mod.rs  user_airdrop.rs  user_bet.rs  user_init.rs  user_settle.rs
src/impls/: game_impls.rs  mod.rs  round_impls.rs  user_impls.rs
static/js/: 489.1dfec072.chunk.js  489.1dfec072.chunk.js.map  489.a44732f3.chunk.js  489.a44732f3.chunk.js.map  608.55b86759.chunk.js  608.55b86759.chunk.js.map  608.acd88f33.chunk.js  608.acd88f33.chunk.js.map  main.121659c6.js  main.1e140aab.js  main.52980d3f.js  main.52980d3f.js.LICENSE.txt  main.67752f11.js  main.6a849858.js  main.796043b3.js  main.96a3cab8.js  main.a4b7d40b.js  main.a4b7d40b.js.LICENSE.txt  main.b04485ad.js  main.b19ce70b.js  main.f15f39b1.js  main.f15f39b1.js.LICENSE.txt
switchboard-function/: Cargo.toml  Dockerfile  Makefile  measurement.txt
switchboard-function/src/: main.rs  params.rs
tests/: init.ts  switchboard-network.ts  switchboard-vrf-flip.test.ts  switchboard.ts
(+10 files in other folders)
