[workspace]

[package]
name = "switchboard-vrf-flip"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "switchboard_vrf_flip"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
bytemuck = "1.13.1"
switchboard-solana = "0.28.12"
# switchboard-solana = { version = "0.28.12", path = "../sbv3/rust/switchboard-solana" }
num-traits = "0.2"
num-derive = "0.3"
solana-security-txt = "1.1.1"
anchor-lang = { version = "0.28", features = ["init-if-needed"] }
anchor-spl = { version = "0.28" }
