[package]
name = "switchboard-vrf-flip"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "switchboard_vrf_flip"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
# devnet = ["switchboard-v2/devnet"]

[dependencies]
anchor-lang = "^0.26.0"
anchor-spl = "^0.26.0"
bytemuck = "1.7.2"
switchboard-v2 = { version = "^0.1.20", features = ["devnet"] }
# switchboard-v2 = { path = "../../../sbv2-solana/rust/switchboard-v2"  }
solana-program = "^1.14.11"
num-traits = "0.2"
num-derive = "0.3"
solana-security-txt = "1.0.1"