[package]
name = "switchboard-vrf-flip"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "switchboard_vrf_flip"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "~0.28.0", features = ["init-if-needed"] }
anchor-spl = "~0.28.0"
bytemuck = "1.13.1"
switchboard-v2 = "0.4.0"
# switchboard-v2 = { path = "../../../sbv2-solana/rust/switchboard-v2", features = [] }
solana-program = ">= 1.16, < 1.17"
num-traits = "0.2"
num-derive = "0.3"
solana-security-txt = "1.0.1"
